--- a/scripts/install
+++ b/scripts/install
@@ -29,8 +29,7 @@ ynh_config_add_nginx
 
 pushd "$install_dir"
 	ynh_hide_warnings ynh_exec_as_app npm install
-	ynh_hide_warnings ynh_exec_as_app npm run build
-	#SIMPLE_MODE=true
+	ynh_hide_warnings ynh_exec_as_app SIMPLE_MODE=true npm run build
 popd
 
 #=================================================
