--- a/scripts/install
+++ b/scripts/install
@@ -25,7 +25,7 @@ ynh_config_add_nginx
 #=================================================
 # INSTALL BENTOPDF
 #=================================================
-#ynh_script_progression "Installing the app..."
+ynh_script_progression "Installing the app..."
 
 pushd "$install_dir"
 	ynh_hide_warnings ynh_exec_as_app npm install
